Lv3 게시글 조회시 댓글 조회